--- a/Referencias/struct.org
+++ b/Referencias/struct.org
@@ -8,8 +8,9 @@
    - [X] Diferença data/tempo.
    - [X] Somar/subtrair dias úteis em data/tempo.
    - [X] Diferença dias úteis em data/tempo.
-   - [ ] Dado um # mês, # semana e # dia, devolver a data/tempo.
+   - [X] Dado um # mês, # semana e # dia, devolver a data/tempo.
    - [X] Opção ANS: se não for dito nada usa a data calculada anteriormente.
+   - [ ] Quando for para inserir datas, fazer clean da interface.
 ** Calculadora de datas e tempos com fusos:
    - Converter data/tempo entre fusos diferentes.
    - Somar/subtrair/diferença data/tempo com fusos.
