--- a/Referencias/struct.org
+++ b/Referencias/struct.org
@@ -22,7 +22,7 @@
      + Opção: 
        * nº de vezes que executa
        * formato de saída (e.g. dif em horas...)
-   - []Somar/subtrair/diferença dias úteis em data/tempo com fusos.
+   - [X]Somar/subtrair/diferença dias úteis em data/tempo com fusos.
      + Opção: 
        * nº de vezes que executa
        * formato de saída (e.g. dif em horas...)
